# trading-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  FIXES_SUMMARY.md  Production.md  Production_Final.md  README.md  RUNBOOK.md  alembic.ini  check_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_account.py  run_single_cycle.py
adhoc/: _dbcheck.py  integration_test.py  test_fingpt.py  test_fingpt2.py  test_full_cycle.py  test_learning.py  test_llm_flow.py  test_llm_strategy.py  test_moex.py  test_moex_debug.py  test_moex_func.py  test_news.py  test_news_sources.py  test_paper.py  test_scanner.py  test_scanner_full.py  test_scanner_llm.py  test_scheduler.py  test_tradable.py  test_virtual.py  verify_fixes.py
agents/: base_agent.py  critic.py  execution_agent.py  market_data_agent.py  memory_agent.py  news_agent.py  portfolio_manager.py  risk_manager.py  strategy_agents.py  supervisor.py
alembic/: env.py
backtester/: __init__.py  __main__.py  config.py  engine.py  historical_data.py  mock_agents.py  report.py  slippage.py
config/: secrets.py  settings.py  settings.yaml
core/: database.py  health.py  logging_setup.py  message_bus.py  orchestrator.py  reconciliation.py  state.py
data/: test_full_results.json  trading.jsonl
integrations/: lmstudio_client.py  moex_scanner.py  tinvest.py
stream/: __init__.py  agent_monitor.py  broadcaster.py  gpu_query.ps1  lmstudio_monitor.py  price_feed.py  server.py
tests/: conftest.py  test_advanced.py  test_drawdown.py  test_execution.py  test_paper_trading.py  test_risk_calculations.py  (+5 more)
(+57 files in other folders)
